--- a/synthetic_data/Synthetic_Data_Generator_and_Model_Training - Moses.ipynb
+++ b/synthetic_data/Synthetic_Data_Generator_and_Model_Training - Moses.ipynb
@@ -2399,7 +2399,20 @@
     "\n",
     "# 4. RandomForestClassifier\n",
     "# from sklearn.ensemble import RandomForestClassifier\n",
-    "# clf = RandomForestClassifier()"
+    "# clf = RandomForestClassifier()\n",
+    "\n",
+    "# 5. SVM\n",
+    "from sklearn import svm\n",
+    "from sklearn.utils import shuffle\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "parameters = {'gamma' : shuffle([.1, 1, 4, 9, 11, 15, 20, 35, 50, 75, 100, 150, 200, 300, 500]),\n",
+    "              'C'     : shuffle([10, 20, 40, 60, 70, 100, 200, 500, 700, 1000, 1100, 1200, 1400, 1600, 2000]),\n",
+    "              'kernel': {'linear', 'poly', 'rbf', 'sigmoid', 'precomputed'},\n",
+    "              'degree': [2, 3, 4, 5, 6]}\n",
+    "\n",
+    "svc  = svm.SVC()\n",
+    "GSCV = GridSearchCV(svc, param_grid=parameters, scoring='accuracy', n_jobs=-1)"
    ]
   },
   {
